--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -536,7 +536,8 @@
         </p>
         <div class="content-learnmore" *ngIf="data_learn">
           <p>
-            Here’s how it works: </p>
+            <p class="sec-title">
+              Here’s how it works: </p>
           <p> - Schedule your deliveries however you see fit. It is completely customizable.</p>
           <p> - Do you need to skip a shipment or adjust your next shipment date? Just edit your recurring order in your
             account or give us a call.
