--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -288,7 +288,7 @@
                 <div class="showsidebar toggle-sidebar hidden-lg">
                     <div class="cart-sidebar sidebar-collapse">
                         <div class="sidebar-head">
-                            <h2> <span class="arrow-down">
+                            <h2  class="title"> <span class="arrow-down">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="11.2" height="6.6"
                                             viewBox="0 0 11.2 6.6">
                                             <path id="Path_2040" data-name="Path 2040"
@@ -1028,7 +1028,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="row">
-                                                            <div class="col-md-3">
+                                                            <div class="col-6 col-md-3">
                                                                 <div class="form-group">
                                                                     <input type="number" formControlName="expiryMonth"
                                                                         placeholder="Month" name="expiryMonth"
@@ -1039,7 +1039,7 @@
                                                                           </div>  
                                                                 </div>
                                                             </div>
-                                                            <div class="col-md-3">
+                                                            <div class="col-6 col-md-3">
                                                                 <div class="form-group">
                                                                     <input type="number" formControlName="expiryYear"
                                                                         placeholder="Year" name="expiryYear"
@@ -1150,14 +1150,14 @@
                                                                         </div>
                                                                     </div>
 
-                                                                    <div class="col-md-4">
+                                                                    <div class="col-6 col-md-4">
                                                                         <div class="form-group">
                                                                             <input type="text"
                                                                                 placeholder="State" name="newState" formControlName="newState"
                                                                                 class="form-control" />
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-md-4">
+                                                                    <div class="col-6 col-md-4">
                                                                         <div class="form-group">
                                                                             <input type="number"
                                                                                 placeholder="ZIP" name="newZip" formControlName="newZip"
