WOrked on Jira issues

--- a/src/app/components/store/product-detail/product-detail.component.css
+++ b/src/app/components/store/product-detail/product-detail.component.css
@@ -31,7 +31,9 @@ section.breadcrumb-product ul li a:hover {
 }
 
 /* Gallery CSS */
-
+.banners-enery img {
+  width: 100%;
+}
 /* Product View Modal CSS */
 
 .product-info p {
