--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -6,7 +6,7 @@
           <div class="signup-box-wrapper">
             <h3>Create Your Account</h3>
             <div class="form-group mb-3">
-              <input type="text" class="form-control" formControlName="firstName" placeholder="First Name"
+              <input type="text" class="form-control" formControlName="firstName" placeholder="First name"
                 [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
                 <span class="valid-text">* Required</span>
               <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
@@ -14,7 +14,7 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="text" class="form-control" formControlName="lastName" placeholder="Last Name"
+              <input type="text" class="form-control" formControlName="lastName" placeholder="Last name"
                 [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
                 <span class="valid-text">* Required</span>
               <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
@@ -22,7 +22,7 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="email" class="form-control" (change)="emailVerify('Email')" formControlName="emailAddress" placeholder="Email Address"
+              <input type="email" class="form-control" (change)="emailVerify('Email')" formControlName="emailAddress" placeholder="Email address"
                 [ngClass]="{ 'is-invalid': submitted && f.emailAddress.errors }" />
                 <span class="valid-text">* Required</span>
               <div *ngIf="submitted && f.emailAddress.errors" class="invalid-feedback">
@@ -40,7 +40,7 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="text" class="form-control" formControlName="phoneNumber" [textMask]="{mask: maskMobileNo}" placeholder="Phone Number"
+              <input type="text" class="form-control" formControlName="phoneNumber" [textMask]="{mask: maskMobileNo}" placeholder="Phone number"
                 [ngClass]="{ 'is-invalid': submitted && f.phoneNumber.errors }" />
                 <span class="valid-text">* Required</span>
               <div *ngIf="submitted && f.phoneNumber.errors" class="invalid-feedback">
@@ -60,7 +60,7 @@
             </div>
             <div class="form-group mb-3">
               <input type="password" class="form-control" formControlName="confirmPassword" minlength="6" maxlength="12"
-                placeholder="Confirm Password" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+                placeholder="Confirm password" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
                 <span class="valid-text">* Required</span>
               <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                 <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
