--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -42,7 +42,7 @@
           </svg>
         </i>
         <select class="form-control" (change)="onProductFilter($event)">
-          <option  [value]="1">Featured</option>
+          <option  [value]="1">Filter By</option>
           <option  [value]="2">Price: $ - $$</option>
           <option  [value]="3">Price: $$ - $</option>
           <option  [value]="4">Name: A - Z</option>
@@ -278,7 +278,7 @@
                     <select [(ngModel)]="quantityValue"  [ngModelOptions]="{standalone: true}" class="form-control">
                       <option class="dropdown-item" disabled selected value="undefined">Select Quantity</option>
                       <option *ngFor="let qty of quantity" [value]="qty.value">
-                      {{qty.value}}
+                      Qty {{qty.value}}
                        </option>
                     </select>
                    
