--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -1,37 +1,37 @@
 <header>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <div class="logo-center">
-        <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
-            src="../../assets/logo-wink.png" /></a>
-      </div>
-      <button (click)="toggleDisplayDivIf()" class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <div class="logo-center">
+                <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img src="../../assets/logo-wink.png" /></a>
+            </div>
+            <button (click)="toggleDisplayDivIf()" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
-      <div id="main-menu" class="show-mob">
-        <ul class="right-menu ">
-          <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
-                *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
-        <li><a (click)="showSearchbar()"><i class="fa fa-search"></i></a></li>
-        </ul>
-      </div>
+            <div id="main-menu" class="show-mob">
+                <ul class="right-menu ">
+                    <li><a (click)="showSearchbar()"><i class="fa fa-search"></i></a></li>
 
-      <div class="collapse navbar-collapse d" *ngIf="isDesktopMenu" id="main-menu">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="https://blog.winknaturals.com/" target=_blank [routerLinkActive]="['active']">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
-          </li>
-          <!-- <li class="nav-item dropdown">
+                    <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
+                *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
+
+                </ul>
+            </div>
+
+            <div class="collapse navbar-collapse d" *ngIf="isDesktopMenu" id="main-menu">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://blog.winknaturals.com/" target=_blank [routerLinkActive]="['active']">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
+                    </li>
+                    <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
                 </a>
@@ -42,47 +42,44 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li> -->
-        </ul>
-        <div class="logo-center">
-          <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
-              src="../../assets/logo-wink.png" /></a>
-        </div>
-        <ul class="right-menu">
-          <li>
-            <a [routerLink]="['/store/search-products']"><i class="fa fa-search"></i></a>
-          </li>
-          <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
+                </ul>
+                <div class="logo-center">
+                    <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img src="../../assets/logo-wink.png" /></a>
+                </div>
+                <ul class="right-menu">
+                    <li>
+                        <a [routerLink]="['/store/search-products']"><i class="fa fa-search"></i></a>
+                    </li>
+                    <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
                 *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
-          <li *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links">SIGN IN</a></li>
-          <li *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
-        </ul>
-      </div>
-      <div class="collapse navbar-collapse m" id="main-menu" *ngIf="isMobileMenu"
-        [className]="toggleDisplayDivIf ?  'showmenu' : 'hidemenu'">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://blog.winknaturals.com/">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
-          </li>
-          <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link">SIGN IN</a></li>
-          <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link">Log out</a></li>
-        
-        </ul>
-        <div class="logo-center">
-          <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
-              src="../../assets/logo-wink.png" /></a>
-        </div>
-      </div>
+                    <li *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links">SIGN IN</a></li>
+                    <li *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse m" id="main-menu" *ngIf="isMobileMenu" [className]="toggleDisplayDivIf ?  'showmenu' : 'hidemenu'">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://blog.winknaturals.com/">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
+                    </li>
+                    <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link">SIGN IN</a></li>
+                    <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link">Log out</a></li>
 
-      <!-- <div class="searchOptionsbox" *ngIf="isSearchshow">
+                </ul>
+                <div class="logo-center">
+                    <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img src="../../assets/logo-wink.png" /></a>
+                </div>
+            </div>
+
+            <!-- <div class="searchOptionsbox" *ngIf="isSearchshow">
         <div class="close-ico">
           <a (click)="closeSearchbar()">
             <svg id="Icon_Close_Rounded" data-name="Icon / Close / Rounded" xmlns="http://www.w3.org/2000/svg" width="24"
@@ -102,6 +99,6 @@
           </button>
         </div>
       </div> -->
-    </div>
-  </nav>
+        </div>
+    </nav>
 </header>
