--- a/src/app/components/store/cart/cart.component.css
+++ b/src/app/components/store/cart/cart.component.css
@@ -41,6 +41,7 @@ section.cart-header .grid-box-shadow .cart-singleitem {
     margin-bottom: 20px;
     border-bottom: 1px solid #f1f1f1;
     padding-bottom: 20px;
+    overflow: hidden;
 }
 
 section.cart-header .grid-box-shadow .cart-singleitem .data-cart {
@@ -680,6 +681,9 @@ button.btn-add-promo {
     }
     .grid-box-shadow.today-order {
         margin-top: 16px;
+    }
+    .cart-quantity.des-sec {
+        flex-direction: column;
     }
 }
 
