--- a/src/app/components/store/shop/shop.component.css
+++ b/src/app/components/store/shop/shop.component.css
@@ -53,6 +53,11 @@ section.products {
     padding: 70px 10px;
 }
 
+section.products .col-md-3 {
+    padding-right: 7px;
+    padding-left: 7px;
+}
+
 section.products h3 {
     font-family: 'g-regular';
     font-size: 28px;
@@ -69,7 +74,7 @@ section.products h3 {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    height: 45px;
+    /* height: 45px; */
 }
 
 .prod-wrapp .card-body .product-details h6 {
@@ -119,15 +124,20 @@ section.products h3 {
 
 .reviews-product p {
     font-size: 13px;
-    margin: 0 0 0 10px;
+    margin: 0 0 0 0px;
 }
 
 .reviews-product ul {
     margin-bottom: 0px;
+    margin-right: 8px;
 }
 
 .reviews-product {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+}
+
+.reviews-product ul li i.fas.fa-star {
+    font-size: 13px;
 }
 
 .prod-wrapp .card {
@@ -468,7 +478,7 @@ a.btn-add:hover {
         display: block !important;
     }
     .prod-wrapp .prod-list-item .product-details .reviews-product ul {
-        margin-bottom: 10px;
+        margin-bottom: 0px;
     }
 }
 
@@ -495,8 +505,8 @@ a.btn-add:hover {
         font-size: 18px;
     }
     .prod-wrapp .prod-list-item {
-        width: 100%;
-        max-width: 100%;
-        flex: 0 0 100%;
+        width: 50%;
+        max-width: 50%;
+        flex: 0 0 50%;
     }
 }
