--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -1,25 +1,25 @@
 <section class="shop-banner">
-  <div class="container-banner">
-    <div class="content-banner">
-      <h3>bath Sale Today Only!</h3>
-      <p>Dolor sit amet, consetetur sadipscing elitr, sed diam</p>
-      <p><a href="#" class="btn btn-blue">Learn More</a></p>
+    <div class="container-banner">
+        <div class="content-banner">
+            <h3>bath Sale Today Only!</h3>
+            <p>Dolor sit amet, consetetur sadipscing elitr, sed diam</p>
+            <p><a href="#" class="btn btn-blue">Learn More</a></p>
+        </div>
     </div>
-  </div>
-  <div class="product-filters">
-    <form class="form-inline">
-      <div class="form-group">
-        <i class="fas fa-caret-down"></i>
-        <select class="custom-select" [(ngModel)]="category" [ngModelOptions]="{standalone: true}" (change)="onCategoryChange()">
+    <div class="product-filters">
+        <form class="form-inline">
+            <div class="form-group">
+                <i class="fas fa-caret-down"></i>
+                <select class="custom-select" [(ngModel)]="category" [ngModelOptions]="{standalone: true}" (change)="onCategoryChange()">
           <option
             *ngFor="let category of categoryModels"
             [value]="category.webCategoryID">
             {{ category.webCategoryDescription }}
           </option>
         </select>
-      </div>
-      <div class="form-group select-filters">
-        <i class="svg-ico">
+            </div>
+            <div class="form-group select-filters">
+                <i class="svg-ico">
           <svg
             id="filter_list-24px"
             xmlns="http://www.w3.org/2000/svg"
@@ -41,79 +41,68 @@
             />
           </svg>
         </i>
-        <select class="form-control" (change)="onProductFilter($event)">
+                <select class="form-control" (change)="onProductFilter($event)">
           <option  [value]="1">Filter By</option>
           <option  [value]="2">Price: $ - $$</option>
           <option  [value]="3">Price: $$ - $</option>
           <option  [value]="4">Name: A - Z</option>
         </select>
-      </div>
-    </form>
-  </div>
+            </div>
+        </form>
+    </div>
 </section>
 
 <section class="products">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h3>{{productNameTitle}}</h3>
-      </div>
-    </div>
-    <div class="row mt-5 prod-wrapp">
-      <div
-        class="col-md-3 prod-list-item"
-        *ngFor="let product of shopProductModels">
-        <div class="card">
-          <!-- <img src="../../assets/products-sample.png" class="card-img-top" alt="products-sample"> -->
-          <!-- <img [src]="'data:image/jpg;base64,'+data.productImage.fileContents" class="card-img-top" alt="products-sample"/> -->
-          <a (click)="RedirectToProduct(adult_check,product,'')"><img
-            [src]="product.image_03"
-            class="card-img-top"
-            alt="products-sample"
-          /></a>
-          <div class="card-body">
-            
-            <div class="product-details">
-              <a  (click)="RedirectToProduct(adult_check, product,'')">
-              <h5 class="card-title">{{ product.itemDescription }}</h5>
-              <h6 class="small">Perfect for ages 3+</h6>
-              <div class="reviews-product">
-                <ul>
-                  <li><i class="fas fa-star"></i></li>
-                  <li><i class="fas fa-star"></i></li>
-                  <li><i class="fas fa-star"></i></li>
-                  <li><i class="fas fa-star"></i></li>
-                  <li><i class="fas fa-star"></i></li>
-                </ul>
-                <p>704 REVIEWS</p>
-              </div>
-              <div class="prod-price">
-                <span class="price-value">${{ product.price }}</span>
-              </div>
-              </a>
-              <span class="more-info">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3>{{productNameTitle}}</h3>
+            </div>
+        </div>
+        <div class="row mt-5 prod-wrapp">
+            <div class="col-md-3 prod-list-item" *ngFor="let product of shopProductModels">
+                <div class="card">
+                    <!-- <img src="../../assets/products-sample.png" class="card-img-top" alt="products-sample"> -->
+                    <!-- <img [src]="'data:image/jpg;base64,'+data.productImage.fileContents" class="card-img-top" alt="products-sample"/> -->
+                    <a (click)="RedirectToProduct(adult_check,product,'')"><img [src]="product.image_03" class="card-img-top" alt="products-sample" /></a>
+                    <div class="card-body">
+
+                        <div class="product-details">
+                            <a (click)="RedirectToProduct(adult_check, product,'')">
+                                <h5 class="card-title">{{ product.itemDescription }}</h5>
+                                <h6 class="small">Perfect for ages 3+</h6>
+                                <div class="reviews-product">
+                                    <ul>
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                    </ul>
+                                    <p>704 REVIEWS</p>
+                                </div>
+                                <div class="prod-price">
+                                    <span class="price-value">${{ product.price }}</span>
+                                </div>
+                            </a>
+                            <span class="more-info">
                 <a (click)="open(produt_view, product,adult_check)" class="btn btn-add"
                   ><i class="fas fa-plus"></i
                 ></a>
               </span>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
 <!--- Shop Modal --->
 <ng-template #produt_view let-modal>
-  <div class="model-productview">
-    <form>
-      <div class="modal-body">
-        <button
-          type="button"
-          class="close"
-          aria-label="Close"
-          (click)="modal.dismiss('Cross click')"
-        >
+    <div class="model-productview">
+        <form>
+            <div class="modal-body">
+                <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
           <svg
             id="Icon_Close_Rounded"
             data-name="Icon / Close / Rounded"
@@ -134,19 +123,11 @@
             </g>
           </svg>
         </button>
-        <div class="card">
-          <div class="product-view-image">
-            <!-- <img src="../../assets/product-view-sample.png" class="card-img-top" alt="products-sample"> -->
-            <img
-              [src]="product.image_03"
-              class="card-img-top"
-              alt="products-sample"
-            />
-            <a
-              routerLinkActive="active"
-              (click)="RedirectToProduct(adult_check,product,'learnMore')"
-              class="btn btn-learn"
-              >Learn More</a
+                <div class="card">
+                    <div class="product-view-image">
+                        <!-- <img src="../../assets/product-view-sample.png" class="card-img-top" alt="products-sample"> -->
+                        <img [src]="product.image_03" class="card-img-top" alt="products-sample" />
+                        <a routerLinkActive="active" (click)="RedirectToProduct(adult_check,product,'learnMore')" class="btn btn-learn">Learn More</a
             >
           </div>
           <div class="card-body">
