--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -59,7 +59,7 @@
                 <h3>{{productNameTitle}}</h3>
             </div>
         </div>
-        <div class="row mt-5 prod-wrapp">
+        <div class="row prod-wrapp">
             <div class="col-md-3 prod-list-item" *ngFor="let product of shopProductModels">
                 <div class="card">
                     <!-- <img src="../../assets/products-sample.png" class="card-img-top" alt="products-sample"> -->
