Worked on UI issues by Jira (S)

--- a/src/app/components/auth/sign-up/sign-up.component.css
+++ b/src/app/components/auth/sign-up/sign-up.component.css
@@ -13,6 +13,7 @@ section.form-sign-up form .signup-box-wrapper {
     border-radius: 5px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.16);
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 span.valid-text {
