--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -202,7 +202,7 @@
                             {{ delivery.quantityModel }}
                           </option>
                           <option *ngFor="let qty of quantity" [value]="qty.value">
-                            {{ qty.value }}
+                            {{'Qty ' + qty.value }}
                           </option>
                         </select>
                                             </div>
