--- a/src/app/components/store/cart/cart.component.css
+++ b/src/app/components/store/cart/cart.component.css
@@ -67,6 +67,7 @@ section.cart-header .grid-box-shadow .cart-singleitem .data-cart .cart-quantity 
     width: 100%;
     display: flex;
     justify-content: space-between;
+    justify-content: end;
 }
 
 .prod-discount {
@@ -158,7 +159,7 @@ button.btn-add-promo svg {
 }
 
 .subscription-with-discount {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
 }
 
@@ -917,7 +918,7 @@ button.btn-add-promo {
 }
 
 .cart-details {
-    max-width: 178px;
+    max-width: 150px;
 }
 
 
