--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -156,7 +156,7 @@
 
 
                 <!-- subscription -->
-                <div *ngIf="subscriptionCartItemsCount > 0" class="grid-box-shadow OTP mt-3 Subscription-box">
+                <div *ngIf="subscriptionCartItemsCount > 0" class="grid-box-shadow OTP Subscription-box">
                     <h3>Subscription Purchase ({{ subscriptionCartItemsCount }})</h3>
                     <div *ngFor="let delivery of subscriptionCartItems; let i = index" class="cart-singleitem">
                         <div class="media">
@@ -244,13 +244,10 @@
 
                     <!-- discount section -->
 
+
                     <div class="other-additional-product">
                         <div class="promo-code">
-                            <div [className]="
-                  inputdata
-                    ? 'special-field datafilled form-group '
-                    : 'special-field dataempty form-group'
-                ">
+                            <div [className]="  inputdata ? 'special-field datafilled form-group ' : 'special-field dataempty form-group' ">
                                 <input type="text" [(ngModel)]="inputdata" class="form-control" bsDatepicker [minDate]="minDate" [bsConfig]="{
                     isAnimated: true,
                     adaptivePosition: true,
@@ -519,6 +516,8 @@
     </button>
         <div class="modal-body">
             <div class="header-conv-subscr">
+
+
                 <h3>Convert to a subscription</h3>
                 <p>
                     Save time and money by selecting which items you would like to subscribe to below
@@ -594,11 +593,10 @@
                           <div class="form-group">
                             <select class="form-control">
                               <option>Every Month</option>
-                              <option>Qty 2</option>
-                              <option>Qty 3</option>
-                              <option>Qty 4</option>
-                              <option>Qty 5</option>
-                              <option>Qty 6</option>
+                              <option _ngcontent-cnl-c154="" disabled="" selected="" value="undefined" class="dropdown-item" ng-reflect-value="undefined"> EveryMonth </option>
+                              <option _ngcontent-cnl-c154="" value="everyWeek" ng-reflect-value="everyWeek" class="ng-star-inserted"> Every Week </option>
+                              <option _ngcontent-cnl-c154="" value="everyYear" ng-reflect-value="everyYear" class="ng-star-inserted"> Every Year </option>
+                            
                             </select>
                           </div>
                         </div>
@@ -649,12 +647,10 @@
                           </div>
                           <div class="form-group">
                             <select class="form-control">
-                              <option>Every Month</option>
-                              <option>Qty 2</option>
-                              <option>Qty 3</option>
-                              <option>Qty 4</option>
-                              <option>Qty 5</option>
-                              <option>Qty 6</option>
+                              <option _ngcontent-cnl-c154="" disabled="" selected="" value="undefined" class="dropdown-item" ng-reflect-value="undefined"> EveryMonth </option>
+                              <option _ngcontent-cnl-c154="" value="everyWeek" ng-reflect-value="everyWeek" class="ng-star-inserted"> Every Week </option>
+                              <option _ngcontent-cnl-c154="" value="everyYear" ng-reflect-value="everyYear" class="ng-star-inserted"> Every Year </option>
+                            
                             </select>
                           </div>
                         </div>
@@ -667,12 +663,13 @@
                     </ul>
                 </div>
                 <div class="conv-subsc-date">
-                    <div class="form-group">
-                        <input type="text" class="form-control" bsDatepicker [maxDate]="maxDate" [bsConfig]="{
+                    <div [className]="date_convertModal ? 'special-field datafilled form-group ' : 'special-field dataempty form-group' ">
+                        <input type="text" [(ngModel)]="date_convertModal" class="form-control" bsDatepicker [maxDate]="maxDate" [bsConfig]="{
                 isAnimated: true,
                 adaptivePosition: true,
                 selectFromOtherMonth: true
-              }" placeholder="Select start date" />
+              }" />
+                        <label class="form-label">Select Start Date</label>
                         <span class="btn-add-promo">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24"
                 viewBox="0 0 24 24">
