--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -71,15 +71,12 @@
                             <a (click)="RedirectToProduct(adult_check, product,'')">
                                 <h5 class="card-title">{{ product.itemDescription }}</h5>
                                 <h6 class="small">Perfect for ages 3+</h6>
-                                <div class="reviews-product">
-                                    <ul>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <p>704 REVIEWS</p>
+                                 <div class="reviews-product">
+                                  <div  [attr.data-product-id]="product.itemID" class="yotpo bottomLine" >
+                                  </div>
+                                    <yotpo-star-rating productId="718" style="display: none;">
+                                    </yotpo-star-rating>
+
                                 </div>
                                 <div class="prod-price">
                                     <span class="price-value">${{ product.price }}</span>
@@ -134,14 +131,19 @@
             <div class="product-details">
               <h5 class="card-title">{{ product?.itemDescription }}</h5>
               <div class="reviews-product">
-                <ul>
+
+                <div  [attr.data-product-id]="product.itemID" class="yotpo bottomLine" >
+                </div>
+                  <yotpo-star-rating productId="718" style="display: none;">
+                  </yotpo-star-rating>
+                <!-- <ul>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                 </ul>
-                <p>704 REVIEWS</p>
+                <p>704 REVIEWS</p> -->
               </div>
               <h6 class="small">Perfect for ages 3+</h6>
               <div class="product-info">
@@ -167,7 +169,7 @@
                     <label class="form-check-label" for="{{bundle.id}}"
                       >{{bundle.name}}</label
                     >
-                  </div>               
+                  </div>
                 </div> -->
 
                   <div class="radio-bundle">
@@ -184,7 +186,7 @@
                     <label class="form-check-label" for="1"
                       >Single</label
                     >
-                  </div>               
+                  </div>
                 </div>
                 <div class="radio-bundle">
                   <div class="form-check form-check-inline">
@@ -199,7 +201,7 @@
                     <label class="form-check-label" for="2"
                       >2-pk (Save 5%)</label
                     >
-                  </div>               
+                  </div>
                 </div>
               </div>
               <div class="prod-bundle-select mt-0 delivery-radio">
@@ -212,11 +214,11 @@
                       name="inlineRadioOptionsdelivery"
                       id="{{i}}{{type}}"
                       value="{{type}}"
-                      (change)="checkDelivery(type)"                      
+                      (change)="checkDelivery(type)"
                     />
                     <label class="form-check-label" for="{{i}}{{type}}"
                       >{{type == 0 ? 'Single Delivery' : 'Subscribe & Save 15%'}}</label>
-                  </div>                 
+                  </div>
                 </div> -->
 
                 <div class="radio-bundle">
@@ -227,12 +229,12 @@
                       name="inlineRadioOptionsdelivery"
                       id="3"
                       value="0"
-                      (change)="checkDelivery(0)"    
-                                      
+                      (change)="checkDelivery(0)"
+
                     />
                     <label class="form-check-label" for="3"
                       >Single Delivery</label>
-                  </div>                 
+                  </div>
                 </div>
 
                 <div class="radio-bundle">
@@ -242,13 +244,13 @@
                       type="radio"
                       name="inlineRadioOptionsdelivery"
                       id="4"
-                      value="1" 
-                      checked  
-                      (change)="checkDelivery(1)"                      
+                      value="1"
+                      checked
+                      (change)="checkDelivery(1)"
                     />
                     <label class="form-check-label" for="4"
                       >Subscribe & Save 15%</label>
-                  </div>                 
+                  </div>
                 </div>
 
               </div>
@@ -262,7 +264,7 @@
                       Qty {{qty.value}}
                        </option>
                     </select>
-                   
+
                     <!-- <select  [ngModel]="quantityValue" class="form-control">
                       <option class="dropdown-item" disabled selected value="undefined">Select Quantity</option>
                       <option *ngFor="let tech of quantity" [ngValue]="tech">
@@ -285,7 +287,7 @@
                   <div *ngIf="showSubscription" class="form-group">
                     <select (change)="getYearValue($event.target.value)" class="form-control">
                       <!-- <option class="dropdown-item" disabled value="undefined">Select</option>     -->
-                      <option [value]="undefined"  selected="true">Select</option>                 
+                      <option [value]="undefined"  selected="true">Select</option>
                       <option *ngFor="let year of years" [value]="year.value">
                       {{year.name}}
                        </option>
@@ -335,3 +337,6 @@
   </div>
   </div>
 </ng-template>
+
+
+
